--- a/.htaccess
+++ b/.htaccess
@@ -11,7 +11,7 @@ Options -MultiViews
   RewriteCond %{REQUEST_URI} !(\.[a-zA-Z0-9]{1,5}|/|#(.*))$
   RewriteRule ^(.*)$ $1/ [R=301,L]
 
-  RewriteBase /kwf3/
+  RewriteBase /kwf/
 
   RewriteRule ^(class|include|pages|view)/(.*)$ index.php?r=
   RewriteCond %{SCRIPT_FILENAME} !-f
