Renamed path to class files renamed in this version of KWF.

--- a/.gitignore.sample
+++ b/.gitignore.sample
@@ -1,18 +1,18 @@
 #Ignore KWF
-class/controller.php
-class/cookie.php
-class/db.php
-class/db_mysqli.php
-class/db_mysqli_statement.php
-class/db_object.php
-class/page.php
-class/request.php
-class/response.php
-class/router.php
-class/session.php
-class/view.php
-class/controller/text.php
-class/model/page_model.php
+class/Controller.php
+class/Cookie.php
+class/Db.php
+class/DbMysqli.php
+class/DbMysqliStatement.php
+class/DbObject.php
+class/Page.php
+class/Request.php
+class/Response.php
+class/Router.php
+class/Session.php
+class/View.php
+class/Controller/Text.php
+class/Model/PageModel.php
 css/kwf*
 include/*.php
 !include/functions_extra.php
